--- a/public/index.html
+++ b/public/index.html
@@ -6,31 +6,31 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Woman Life Freedom" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Woman Life Freedom</title>
-  <meta name="description" content="Please help us in our fight toward Freedom">
+  <meta name="description" content="Please help us in our fight for Freedom">
 
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="Woman Life Freedom">
-  <meta itemprop="description" content="Please help us in our fight toward Freedom">
-  <meta itemprop="image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+  <meta itemprop="description" content="Please help us in our fight for Freedom">
+  <!-- <meta itemprop="image"
+    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"> -->
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://soumyajit.vercel.app">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="S0umyajit | Portfolio">
-  <meta property="og:description" content="Self Developed personal website build with React.js">
-  <meta property="og:image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+  <meta property="og:title" content="Woman Life Freedom">
+  <meta property="og:description" content="Please help us in our fight for Freedom">
+  <!-- <meta property="og:image"
+    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"> -->
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="S0umyajit | Portfolio">
   <meta name="twitter:description" content="Self Developed personal website build with React.js">
-  <meta name="twitter:image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+  <!-- <meta name="twitter:image"
+    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"> -->
 </head>
 
 <body>
