--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
   <meta name="description" content="Woman Life Freedom" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Woman Life Freedom</title>
-  <meta name="description" content="Please help us in our fight for Freedom">
+  <meta name="description" content="Please help Iranians in their fight for Freedom">
 
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="Woman Life Freedom">
-  <meta itemprop="description" content="Please help us in our fight for Freedom">
+  <meta itemprop="description" content="Please help Iranians in their fight for Freedom">
   <!-- <meta itemprop="image"
     content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"> -->
 
@@ -21,14 +21,14 @@
   <meta property="og:url" content="https://soumyajit.vercel.app">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Woman Life Freedom">
-  <meta property="og:description" content="Please help us in our fight for Freedom">
+  <meta property="og:description" content="Please help Iranians in their fight for Freedom">
   <!-- <meta property="og:image"
     content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"> -->
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="S0umyajit | Portfolio">
-  <meta name="twitter:description" content="Self Developed personal website build with React.js">
+  <meta name="twitter:title" content="Woman Life Freedom">
+  <meta name="twitter:description" content="Please help Iranians in their fight for Freedom">
   <!-- <meta name="twitter:image"
     content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"> -->
 </head>
