--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="Woman Life Freedom">
   <meta itemprop="description" content="Please help Iranians in their fight for Freedom">
-  <!-- <meta itemprop="image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"> -->
+  <meta itemprop="image"
+    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://petition-for-iran.vercel.app/">
