--- a/public/index.html
+++ b/public/index.html
@@ -15,21 +15,21 @@
   <meta itemprop="name" content="Woman Life Freedom">
   <meta itemprop="description" content="Please help Iranians in their fight for Freedom">
   <meta itemprop="image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://raw.githubusercontent.com/lrhm/petition-for-iran/master/public/assets/stand_with_us.jpeg">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://petition-for-iran.vercel.app/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Woman Life Freedom">
   <meta property="og:description" content="Please help Iranians in their fight for Freedom">
-  <!-- <meta property="og:image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"> -->
+  <meta property="og:image"
+    content="https://raw.githubusercontent.com/lrhm/petition-for-iran/master/public/assets/stand_with_us.jpeg">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:title" content="Woman Life Freedom">
   <meta name="twitter:description" content="Please help Iranians in their fight for Freedom">
-  <!-- <meta name="twitter:image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"> -->
+  <meta name="twitter:image"
+    content="https://raw.githubusercontent.com/lrhm/petition-for-iran/master/public/assets/stand_with_us.jpeg">
 </head>
 
 <body>
