--- a/public/index.html
+++ b/public/index.html
@@ -6,30 +6,30 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Woman Life Freedom" />
+  <meta name="description" content="Woman Life Freedom Revolution" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Woman Life Freedom</title>
   <meta name="description" content="Please help Iranians in their fight for Freedom">
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="Woman Life Freedom">
+  <meta itemprop="name" content="Woman Life Freedom Revolution">
   <meta itemprop="description" content="Please help Iranians in their fight for Freedom">
   <meta itemprop="image"
-    content="https://raw.githubusercontent.com/lrhm/petition-for-iran/master/public/assets/stand_with_us.jpeg">
+    content="https://raw.githubusercontent.com/lrhm/petition-for-iran/master/public/assets/20.jpeg">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://petition-for-iran.vercel.app/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Woman Life Freedom">
+  <meta property="og:title" content="Woman Life Freedom Revolution">
   <meta property="og:description" content="Please help Iranians in their fight for Freedom">
   <meta property="og:image"
-    content="https://raw.githubusercontent.com/lrhm/petition-for-iran/master/public/assets/stand_with_us.jpeg">
+    content="https://raw.githubusercontent.com/lrhm/petition-for-iran/master/public/assets/20.jpeg">
 
   <!-- Twitter Meta Tags -->
-  <meta name="twitter:title" content="Woman Life Freedom">
+  <meta name="twitter:title" content="Woman Life Freedom Revolution">
   <meta name="twitter:description" content="Please help Iranians in their fight for Freedom">
   <meta name="twitter:image"
-    content="https://raw.githubusercontent.com/lrhm/petition-for-iran/master/public/assets/stand_with_us.jpeg">
+    content="https://raw.githubusercontent.com/lrhm/petition-for-iran/master/public/assets/20.jpeg">
 </head>
 
 <body>
