--- a/public/index.html
+++ b/public/index.html
@@ -18,12 +18,12 @@
     content="https://raw.githubusercontent.com/lrhm/petition-for-iran/master/public/assets/20.jpeg">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://petition-for-iran.vercel.app/">
+  <meta property="og:url" content="https://petition-for-iran.vercel.app/freedom">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Woman Life Freedom Revolution">
   <meta property="og:description" content="Please help Iranians in their fight for Freedom">
   <meta property="og:image"
-    content="https://raw.githubusercontent.com/lrhm/petition-for-iran/master/public/assets/20.jpeg">
+    content="https://raw.githubusercontent.com/lrhm/petition-for-iran/master/public/assets/stand_with_us.jpeg">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:title" content="Woman Life Freedom Revolution">
