--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Woman Life Freedom Revolution">
   <meta property="og:description" content="Please help Iranians in their fight for Freedom">
+  <meta property="og:image:type" content="image/jpeg">
   <meta property="og:image"
     content="https://raw.githubusercontent.com/lrhm/petition-for-iran/master/public/assets/stand_with_us_tiny.jpeg">
 
