--- a/public/index.html
+++ b/public/index.html
@@ -18,11 +18,14 @@
     content="https://raw.githubusercontent.com/lrhm/petition-for-iran/master/public/assets/20.jpeg">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://petition-for-iran.vercel.app/freedom">
+  <meta property="og:url" content="https://petition-for-iran.vercel.app/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Woman Life Freedom Revolution">
   <meta property="og:description" content="Please help Iranians in their fight for Freedom">
   <meta property="og:image:type" content="image/jpeg">
+  <meta property="og:image:width" content="300">
+  <meta property="og:image:height" content="300">
+
   <meta property="og:image"
     content="https://raw.githubusercontent.com/lrhm/petition-for-iran/master/public/assets/stand_with_us_tiny.jpeg">
 
