--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Woman Life Freedom Revolution" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Woman Life Freedom</title>
-  <meta name="description" content="Please help Iranians in their fight for Freedom">
+  <title>WLF Revolution</title>
+  <meta name="description" content="Please help Iranians in their revolution">
 
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="Woman Life Freedom Revolution">
-  <meta itemprop="description" content="Please help Iranians in their fight for Freedom">
+  <meta itemprop="description" content="Please help Iranians in their revolution">
   <meta itemprop="image"
     content="https://raw.githubusercontent.com/lrhm/petition-for-iran/master/public/assets/20.jpeg">
 
@@ -21,7 +21,7 @@
   <meta property="og:url" content="https://petition-for-iran.vercel.app/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Woman Life Freedom Revolution">
-  <meta property="og:description" content="Please help Iranians in their fight for Freedom">
+  <meta property="og:description" content="Please help Iranians in their revolution">
   <meta property="og:image:type" content="image/jpeg">
   <meta property="og:image:width" content="1440">
   <meta property="og:image:height" content="1800">
@@ -31,7 +31,7 @@
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:title" content="Woman Life Freedom Revolution">
-  <meta name="twitter:description" content="Please help Iranians in their fight for Freedom">
+  <meta name="twitter:description" content="Please help Iranians in their revolution>
   <meta name="twitter:image"
     content="https://raw.githubusercontent.com/lrhm/petition-for-iran/master/public/assets/20.jpeg">
 </head>
