--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:title" content="Woman Life Freedom Revolution">
-  <meta name="twitter:description" content="You can help Iranians in their revolution>
+  <meta name="twitter:description" content="You can help Iranians in their revolution">
   <meta name="twitter:image"
     content="https://raw.githubusercontent.com/lrhm/petition-for-iran/master/public/assets/20.jpeg">
 </head>
