title page change

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Woman Life Freedom Revolution" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>WLF Revolution</title>
+  <title>Woman Life Freedom</title>
   <meta name="description" content="You can help Iranians in their revolution">
 
   <!-- Google / Search Engine Tags -->
